# TradFiEngine

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: __init__.py  default.yaml
scripts/: dashboard.py  live_loop.py  live_trade.py  paper_trade.py  train.py  train_walkforward.py
src/: __init__.py  telemetry.py
src/brokers/: __init__.py  base.py  ccxt_broker.py  coinbase_broker.py  paper.py
src/core/: __init__.py  api_resilience.py  circuit_breaker.py  order_tracker.py  sqlite_logger.py
src/data/: __init__.py  loader.py
src/engine/: __init__.py  data_ingestor.py  executor.py  multi_symbol_ingestor.py  state_buffer.py  strategy_brain.py
src/environment/: __init__.py  multi_asset_env.py  trading_env.py
src/environment/legacy/: __init__.py  multi_symbol_env.py
src/indicators/: __init__.py  compute.py
